--- a/package.json
+++ b/package.json
@@ -42,7 +42,9 @@
     "url": "https://github.com/brucx/weixin-ts-sdk/issues"
   },
   "homepage": "https://github.com/brucx/weixin-ts-sdk#readme",
-  "dependencies": {},
+  "dependencies": {
+    "axios": "^0.19.0"
+  },
   "devDependencies": {
     "@semantic-release/changelog": "^3.0.4",
     "@semantic-release/git": "^7.0.12",
