--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -15,6 +15,7 @@ env:
 
 rules:
   no-console: 0
+  "@typescript-eslint/camelcase": 0
   "@typescript-eslint/no-var-requires": 0
   "@typescript-eslint/explicit-function-return-type": 0
   "@typescript-eslint/no-explicit-any": 0
