--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "cz-conventional-changelog": "^2.0.0",
     "eslint": "^5.16.0",
     "eslint-config-prettier": "^5.1.0",
+    "express": "^4.17.1",
     "husky": "^2.5.0",
     "istanbul": "^0.4.5",
     "mocha": "^5.0.0",
