--- a/package.json
+++ b/package.json
@@ -43,7 +43,8 @@
   },
   "homepage": "https://github.com/brucx/weixin-ts-sdk#readme",
   "dependencies": {
-    "axios": "^0.19.0"
+    "axios": "^0.19.0",
+    "xml2js": "^0.4.22"
   },
   "devDependencies": {
     "@semantic-release/changelog": "^3.0.4",
@@ -55,8 +56,10 @@
     "@types/mocha": "^5.2.7",
     "@types/node": "^12.0.2",
     "@types/sinon": "^7.0.13",
+    "@types/xml2js": "^0.4.5",
     "@typescript-eslint/eslint-plugin": "^2.10.0",
     "@typescript-eslint/parser": "^2.10.0",
+    "body-parser": "^1.19.0",
     "chai": "^4.2.0",
     "cz-conventional-changelog": "^2.0.0",
     "eslint": "^5.16.0",
