编译时附带类型

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,9 +1,9 @@
 {
   "compilerOptions": {
     "outDir": "./built",
-    "allowJs": true,
     "target": "es6",
     "lib": ["es6"],
+    "declaration": true,
     "typeRoots": ["node_modules/@types"],
     "module": "commonjs"
   },
