--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
   "homepage": "https://github.com/brucx/weixin-ts-sdk#readme",
   "dependencies": {
     "axios": "^0.19.0",
+    "form-data": "^3.0.0",
     "xml2js": "^0.4.22"
   },
   "devDependencies": {
