--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "weixin-ts-sdk",
-  "version": "1.0.3",
+  "version": "1.0.4-2",
   "description": "EasyWeCaht for Node, TypeScript first!",
   "main": "built/index.js",
   "files": [
@@ -60,8 +60,8 @@
     "@types/node": "^12.12.22",
     "@types/sinon": "^7.0.13",
     "@types/xml2js": "^0.4.5",
-    "@typescript-eslint/eslint-plugin": "^2.13.0",
-    "@typescript-eslint/parser": "^2.13.0",
+    "@typescript-eslint/eslint-plugin": "^2.14.0",
+    "@typescript-eslint/parser": "^2.14.0",
     "body-parser": "^1.19.0",
     "chai": "^4.2.0",
     "cz-conventional-changelog": "^2.0.0",
