--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "@types/chai": "^4.2.7",
     "@types/debug": "^4.1.4",
     "@types/express": "^4.17.2",
+    "@types/ioredis": "^4.14.3",
     "@types/lodash.defaults": "^4.2.6",
     "@types/lodash.flatten": "^4.4.6",
     "@types/mocha": "^5.2.7",
@@ -69,6 +70,7 @@
     "eslint-config-prettier": "^5.1.0",
     "express": "^4.17.1",
     "husky": "^2.5.0",
+    "ioredis": "^4.14.1",
     "istanbul": "^0.4.5",
     "mocha": "^5.0.0",
     "prettier": "^1.18.2",
