--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "weixin-ts-sdk",
-  "version": "1.1.4",
+  "version": "1.1.4a",
   "description": "EasyWeCaht for Node, TypeScript first!",
   "main": "built/index.js",
   "files": [
